--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@tailwindcss/vite": "^4.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^6.30.0",
+    "router-dom": "^3.0.3",
     "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
